# nodestream-plugin-dotenv

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
nodestream_plugin_dotenv/: plugin.py
tests/: test_plugin.py
