[tool.poetry]
name = "nodestream-plugin-dotenv"
version = "0.1.0"
description = ""
authors = ["Zach Probst <Zach_Probst@intuit.com>"]
readme = "README.md"
packages = [{include = "nodestream_plugin_dotenv"}]

[tool.poetry.dependencies]
python = "^3.11"
nodestream = "^0.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.plugins."nodestream.plugins"]
project = "nodestream_plugin_dotenv.plugin"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
