[tool.poetry]
name = "nodestream-plugin-dotenv"
version = "0.12.0rc1"
description = "A plugin to nodestream for loading environment variables from a .env file"
authors = ["Zach Probst <Zach_Probst@intuit.com>"]
packages = [{include = "nodestream_plugin_dotenv"}]
license = "Apache 2.0"

readme = "README.md"
homepage = "https://github.com/nodestream-proj/nodestream"
repository = "https://github.com/nodestream-proj/nodestream-plugin-dotenv"
documentation = "https://nodestream-proj.github.io/nodestream-plugin-dotenv"

keywords = ["etl", "neo4j", "declarative", "data", "kafka", "ingest", "nodestream"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "^3.10"
nodestream = "^0.12.0rc2"
python-dotenv = ">=0.21.0,< 2"

[tool.poetry.plugins."nodestream.plugins"]
projects = "nodestream_plugin_dotenv.plugin"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
ruff = "^0.0.284"
isort = "^5.12.0"
black = "^23.7.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
